[ADD] update user
- add update user http handler
- add update user swagger
